# ecotrack-app

./: .gitattributes  .gitignore  README.md  cloudbuild-frontend.yaml  deploy.bat  deploy.ps1  gcloud.bat  render.yaml  validate_phase1.py
backend/: .env.example  Dockerfile  build.sh  check_db.py  create_admin.py  manage.py  pyproject.toml  requirements.txt  test_tips.py  verify_seed.py
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/ai_coach/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/calculator/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/challenges/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: apps.py  exceptions.py
backend/apps/dashboard/: apps.py  urls.py  views.py
backend/apps/data_sync/: __init__.py  apps.py  models.py  urls.py  views.py
backend/apps/notifications/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/offsets/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  cloudrun.py  development.py  production.py
backend/emission_factors/: __init__.py  loader.py
backend/emission_factors/data/: defra_2023.json  ipcc_ar6.json
backend/services/: ai_coach.py  badge_service.py  calculator_service.py  ecobot_knowledge.py  government_data.py  notification_service.py  offset_registry.py  tip_fallback.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai_coach_api.py  test_auth.py  test_calculator_api.py  test_challenges_api.py  test_data_sync_api.py  test_notifications_api.py  test_offsets_api.py
backend/tests/unit/: test_ai_coach.py  test_badge_service.py  test_calculator_service.py  test_ecobot_knowledge.py  test_government_data.py  test_offset_registry.py  test_seed_challenges.py  test_tip_fallback.py
(+33 files in other folders)
