[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ecotrack-backend"
version = "0.1.0"
description = "EcoTrack carbon footprint awareness platform backend"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.*",
    "djangorestframework==3.15.*",
    "djangorestframework-simplejwt==5.3.*",
    "django-cors-headers==4.4.*",
    "django-ratelimit==4.1.*",
    "celery==5.4.*",
    "redis==5.0.*",
    "psycopg[binary]==3.2.*",
    "anthropic==0.34.*",
    "httpx==0.27.*",
    "python-decouple==3.8",
    "sentry-sdk[django]==2.*",
    "django-allauth==64.*",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.*",
    "black==24.*",
    "mypy==1.11.*",
    "django-stubs==5.*",
    "djangorestframework-stubs==3.15.*",
    "pytest==8.*",
    "pytest-django==4.9.*",
    "pytest-cov==5.*",
    "factory-boy==3.3.*",
    "faker==26.*",
    "responses==0.25.*",
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT"]
ignore = ["E501"]
exclude = ["check_db.py", "create_admin.py", "verify_seed.py", "manage.py", "validate_phase1.py"]

[tool.ruff.isort]
known-first-party = ["apps", "services", "emission_factors"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
addopts = "--cov=apps --cov=services --cov-report=term-missing --cov-fail-under=80 -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*", "manage.py"]
